--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                         About Me
                     </h1>
                     <p>I'm currently a junior at <span class="bold">UNC Chapel Hill</span> studying Computer Science and Information Science 
-                        with a focus on <span class="bold">Human-Computer Interaction</span>.</p>
+                        with a focus on Human-Computer Interaction.</p>
                     <p>After working on various fullstack development projects, I've realized that I enjoy frontend development the most. 
                         I've always had a passion for design, whether it be through making graphics for clubs or friends, 
                         or through personal art projects. I enjoy UX design because it's the perfect overlap of design and technology!</p>
