--- a/resume.html
+++ b/resume.html
@@ -52,11 +52,10 @@
                     <div class="row">
                         <div class="col">
                             <h5>University of North Carolina at Chapel Hill</h5>
-                            <p><span class="bold">Majors:</span> B.S. Computer Science, B.S. Information Science</p>
-                            <p><span class="bold">Concentration:</span> Human-Computer Interaction</p>
+                            <p><span class="bold">Majors:</span> B.A. Computer Science, B.S. Information Science (Human-Computer Interaction)</p>
                             <p><span class="bold">GPA:</span> 3.97/4.00</p>
                             <p><span class="bold">Honors:</span> Dean's List (all semesters), SILS Scholarship</p>
-                            <p><span class="bold">Activities:</span> CUSA, AASA, UNC Figure Skating Club, Backpage UNC</p>
+                            <p><span class="bold">Activities:</span> CUSA, AASA, Backpage UNC</p>
                         </div>
                     </div>
                     <br>
@@ -118,29 +117,58 @@
         <section class="resume-section">
             <div class="row">
                 <div class="col-sm-5 col-md-4 col-lg-3">
-                    <h4>Experience</h4>
+                    <h4>Featured Projects</h4>
                 </div>
                 <div class="col">
                     <div class="experience">
                         <div class="position">
-                            <h5>UNC School of Government</h5>
-                            <p>UI / Instructional Designer</p>
+                            <h5>Around the Block | Design Lead</h5>
+                            <p>May 2023</p>
                         </div>
-                        <p class="grey">Aug 2022 - Present</p>
+                        <ul class="bullets">
+                            <li>
+                                Worked with a team of 3 to research, design, and develop a full stack website for artists that generates art challenges and allows users to share and view community artwork.
+                            </li>
+                            <li>
+                                Designed website with Figma and developed all of the frontend with Angular, HTML, and CSS. Used TypeScript to write functions for retrieving and populating data from the backend. Debugged Python functions in the backend.
+                            </li>
+                        </ul>
                     </div>
                     <div class="experience">
                         <div class="position">
-                            <h5>Social Games Club</h5>
-                            <p>Graphic Designer</p>
+                            <h5>CSXL Workshops | Tech Lead</h5>
+                            <p>Apr 2023</p>
                         </div>
-                        <p class="grey">June 2018 - Present</p>
+                        <ul class="bullets">
+                            <li>
+                                Led a team of 4 to develop a new workshops feature for the UNC Computer Science Experience Lab’s website using Angular, TypeScript, and RxJS in the frontend and Python, SQLAlchemy, and Postgres in the backend.
+                            </li>
+                            <li>
+                                Developed functions for populating data and registering for workshops, wrote Pytest unit tests for backend functions, and conducted code reviews for teammates on GitHub.
+                            </li>
+                        </ul>
                     </div>
                     <div class="experience">
                         <div class="position">
-                            <h5>UNC Computer Science</h5>
-                            <p>Software Developer</p>
+                            <h5>Polaris Navigation | Designer and Developer</h5>
+                            <p>May 2022</p>
                         </div>
-                        <p class="grey">Aug 2021 - May 2022</p>
+                        <ul class="bullets">
+                            <li>
+                                Worked with a team of 5 to design and develop an accessible navigation web app using Angular, Python, MongoDB, and Figma.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
+                            <h5>KTP Rush App | UX Designer</h5>
+                            <p>Apr 2023</p>
+                        </div>
+                        <ul class="bullets">
+                            <li>
+                                Created a streamlined system prototype app for students rushing for UNC KTP using Figma.
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -148,44 +176,70 @@
         <section class="resume-section pink">
             <div class="row">
                 <div class="col-sm-5 col-md-4 col-lg-3">
-                    <h4>Projects</h4>
+                    <h4>Experience</h4>
                 </div>
                 <div class="col">
                     <div class="experience">
                         <div class="position">
-                            <h5>Around the Block | Design Lead</h5>
-                            <p>Designed and developed a website for artists using Angular, TypeScript, HTML, CSS, Python, and PostgreSQL.</p>
+                            <h5>Summer Technology Intern | Star EV</h5>
+                            <p>Summer 2023</p>
                         </div>
+                        <ul class="bullets">
+                            <li>
+                                Developed frontend of new e-commerce website using HTML, CSS, and JavaScript in collaboration with marketing team members to improve customer experience.
+                            </li>
+                            <li>
+                                Designed interface of dashboard display screens for new vehicle models, creating wireframes and prototypes to enhance end user experience.
+                            </li>
+                        </ul>
                     </div>
                     <div class="experience">
                         <div class="position">
-                            <h5>CSXL Workshops | Tech Lead</h5>
-                            <p>Developed a new workshops feature for UNC's CSXL's website using Angular, TypeScript, and Python.</p>
+                            <h5>UI / Instructional Designer | UNC School of Government</h5>
+                            <p>Aug 2022 - May 2023</p>
                         </div>
+                        <ul class="bullets">
+                            <li>
+                                Designed and developed educational web pages for the online MPA program using HTML and CSS.
+                            </li>
+                            <li>
+                                Created educational modules, materials, and infographics for instructors and students using Photoshop.
+                            </li>
+                        </ul>
                     </div>
                     <div class="experience">
                         <div class="position">
-                            <h5>KTP Rush App | UX Designer</h5>
-                            <p>Designed an iOS app to optimize UNC KTP's rush process using Figma.</p>
+                            <h5>Software Toolsmith (Developer) | UNC Computer Science</h5>
+                            <p>Aug 2021 - May 2022</p>
                         </div>
+                        <ul class="bullets">
+                            <li>
+                                Worked with a team of 3 to maintain a full stack web application to track progress of 200+ Computer Science graduate students.
+                            </li>
+                            <li>
+                                Used JavaScript and Bootstrap to format frontend pages and improve usability, used Express.js and MongoDB in the backend to add new form submissions, and wrote Cypress unit tests to ensure application accuracy.
+                            </li>
+                        </ul>
                     </div>
                     <div class="experience">
                         <div class="position">
-                            <h5>Bloom</h5>
-                            <p>Designed an iOS app to boost productivity using Figma.</p>
+                            <h5>Graphic Design Director | Social Games Club</h5>
+                            <p>June 2018 - Present</p>
                         </div>
-                    </div>
-                    <div class="experience">
-                        <div class="position">
-                            <h5>Polaris Navigation</h5>
-                            <p>Designed and developed a website for accessible navigation on campus using Angular, Python, MongoDB, and Figma.</p>
-                        </div>
+                        <ul class="bullets">
+                            <li>
+                                Lead a team of designers and artists to create graphic assets for major club events.
+                            </li>
+                            <li>
+                                Create graphics for weekly, annual, and regular events using Photoshop for a community of 300+ members.
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </section>
         <div class="row">
-            <a class="button btn-pink" href="./files/Elaine_Dong_Resume_5.5.23.pdf" target="_blank">Get a PDF of my Resume</a>
+            <a class="button btn-pink" href="./files/Elaine_Dong_Resume.pdf" target="_blank">Get a PDF of my Resume</a>
         </div>
     </main>
     <footer>
