update about and projects

--- a/about.html
+++ b/about.html
@@ -47,12 +47,11 @@
                     <h1>
                         About Me
                     </h1>
-                    <p>I'm currently a junior at <span class="bold">UNC Chapel Hill</span> studying Computer Science and Information Science 
+                    <p>I'm currently a senior at <span class="bold">UNC Chapel Hill</span> studying Computer Science and Information Science 
                         with a focus on Human-Computer Interaction.</p>
-                    <p>After working on various fullstack development projects, I've realized that I enjoy frontend development the most. 
-                        I've always had a passion for design, whether it be through making graphics for clubs or friends, 
-                        or through personal art projects. I enjoy UX design because it's the perfect overlap of design and technology!</p>
-                    <p>In my free time, you can probably find me painting, reading a good book, or trying out a new restaurant.</p>
+                    <p>Throughout my journey at UNC, I've explored various full stack projects and have discovered a passion for designing and developing interactive websites while embracing the broader scope of software engineering. 
+                    The road to this point hasn't always been easy, but I am always eager to learn and overcome challenges!</p>
+                    <p>In my free time, you can probably find me painting, drafting creative writing ideas, or trying out a new restaurant :)</p>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 my-picture">
                     <div class="image-wrapper">
