--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <h2>I'm Elaine.</h2>
         </div>
         <div class="my-intro">
-            <p class="tagline">I'm an aspiring software engineer with a focus on frontend development and a passion for UX Design. 
-            I love designing things and implementing my designs!</p>
+            <p class="tagline">I'm an aspiring software engineer with a passion for building intuitive user experiences.</p>
             <p class="in-touch">Get in touch at 
                 <a class="underline-hover" href="mai&#108;to&#58;%65%&#54;C&#37;61%69n&#101;&#100;o%6E&#37;67&#53;&#37;3&#50;%3&#48;&#64;g&#109;%6&#49;i%6&#67;&#37;2Ec%6Fm"><span id="email"></span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
