add projects to nav bar

--- a/projects/atb.html
+++ b/projects/atb.html
@@ -43,7 +43,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="../projects/atb.html">Around the Block</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="../projects/csxl.html">CSXL Workshops</a>
+                      <a class="dropdown-item" href="../projects/ktp.html">KTP Rush App</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="../projects/polaris.html">Polaris Navigation</a>
                     </div>
