--- a/projects/csxl.html
+++ b/projects/csxl.html
@@ -36,6 +36,18 @@
         <div class="collapse navbar-collapse custom-nav-bar justify-content-end" id="navbarContent">
             <ul class="custom-nav navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Projects
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="../projects/atb.html">Around the Block</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="../projects/ktp.html">KTP Rush App</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="../projects/polaris.html">Polaris Navigation</a>
+                    </div>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="../resume.html">Resume</a></li>
             </ul>
