--- a/resume.html
+++ b/resume.html
@@ -35,6 +35,18 @@
         <div class="collapse navbar-collapse custom-nav-bar justify-content-end" id="navbarContent">
             <ul class="custom-nav navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Projects
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="projects/atb.html">Around the Block</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="projects/ktp.html">KTP Rush App</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="projects/polaris.html">Polaris Navigation</a>
+                    </div>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
             </ul>
@@ -52,10 +64,10 @@
                     <div class="row">
                         <div class="col">
                             <h5>University of North Carolina at Chapel Hill</h5>
-                            <p><span class="bold">Majors:</span> B.A. Computer Science, B.S. Information Science (Human-Computer Interaction)</p>
+                            <p><span class="bold">Majors:</span> B.S. Computer Science, B.S. Information Science (Human-Computer Interaction)</p>
                             <p><span class="bold">GPA:</span> 3.97/4.00</p>
-                            <p><span class="bold">Honors:</span> Dean's List (all semesters), SILS Scholarship</p>
-                            <p><span class="bold">Activities:</span> CUSA, AASA, Backpage UNC</p>
+                            <p><span class="bold">Honors:</span> Dean's List (all semesters), SILS Scholarship, Phi Beta Kappa</p>
+                            <p><span class="bold">Activities:</span> CS+Social Good, CUSA, AASA, UNC Figure Skating</p>
                         </div>
                     </div>
                     <br>
@@ -73,13 +85,13 @@
                                     <p>Files and Databases</p>
                                     <p>Foundations of Programming</p>
                                     <p>Computer Organization</p>
+                                    <p>3D VR Graphics</p>
                                 </div>
                                 <div class="col">
                                     <p><span class="bold">Design</span></p>
                                     <p>User Interfaces</p>
                                     <p>System Design and Analysis</p>
-                                    <p>Web Design</p>
-                                    <p>Human Information Behavior</p>
+                                    <p>Practical Web Design</p>
                                 </div>
                             </div>
                         </div>
@@ -120,6 +132,19 @@
                     <h4>Featured Projects</h4>
                 </div>
                 <div class="col">
+                    <div class="experience">
+                        <div class="position">
+                            <h5>LLM Prompt Library | Ally Tech Scholar</h5>
+                            <p>Aug 2023 - Present</p>
+                        </div>
+                        <ul class="bullets">
+                            <li>
+                                Build a prompt library and prompt management system to help employees utilize large language models, allowing users to vote on, sort through, and filter prompts.
+                            </li>
+                            <li>
+                                Utilize React to create an intuitive frontend and JavaScript, Node.js, and AWS to build a robust backend capable of handling vast amounts of data.
+                        </ul>
+                    </div>
                     <div class="experience">
                         <div class="position">
                             <h5>Around the Block | Design Lead</h5>
@@ -170,7 +195,7 @@
                 <div class="col">
                     <div class="experience">
                         <div class="position">
-                            <h5>Web Development Intern | UNC HPDP</h5>
+                            <h5>Web Development Intern | UNC School of Medicine IT</h5>
                             <p>Summer 2023</p>
                         </div>
                         <ul class="bullets">
@@ -245,7 +270,7 @@
             </div>
         </section>
         <div class="row">
-            <a class="button btn-pink" href="./files/Elaine_Dong_Resume.pdf" target="_blank">Get a PDF of my Resume</a>
+            <a class="button btn-pink" href="./files/Dong_Elaine_Resume.pdf" target="_blank">Get a PDF of my Resume</a>
         </div>
     </main>
     <footer>
