--- a/index.html
+++ b/index.html
@@ -111,6 +111,27 @@
                     </div>
                 </div>
             </div>
+            <div class="preview">
+                <div class="project-content">
+                    <a class="thumbnail polaris-img" href="projects/polaris.html" aria-label="polaris thumbnail" title="polaris thumbnail"></a>
+                    <div class="project-info">
+                        <div class="project-title"><h3>Polaris Navigation</h3></div>
+                        <div class="project-desc"><p>An accessible web app for helping students with disabilities navigate around campus.</p></div>
+                        <a href="projects/polaris.html">Learn more
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                            </svg>
+                        </a>
+                        <br>
+                        <div class="tags">
+                            <p class="tag">Angular</p>
+                            <p class="tag">Python</p>
+                            <p class="tag">Figma</p>
+                            <p class="tag">MongoDB</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
