--- a/projects/polaris.html
+++ b/projects/polaris.html
@@ -55,66 +55,24 @@
     </nav>
     <main>
         <section class="background white">
-            <h1>Around the Block</h1>
-            <h4>COMP 590: User Interfaces</h4>
-            <h5>Roles: Design Lead, Developer, Researcher</h5>
-            <p>With a team of three, I designed and developed a website for artists struggling with creative block, 
-                looking to challenge themselves and connect with a community of creatives. Users can generate random art challenges, 
-                called meChallenges, that will challenge them to create something new and unique every time. 
-                Users can also participate in community challenges, called weChallenges, and see what other artists are creating. 
-                Users can post submissions for the challenges and get feedback and support from other members of the community.</p>
+            <h1>Polaris Navigation</h1>
+            <h4>COMP 426: Modern Web Development</h4>
+            <h5>Roles: Designer, Developer</h5>
+            <p>I collaborated with a team of 5 to design and develop an accessible navigation web app for UNC’s campus using Angular, Python, MongoDB, and Figma.
+                I designed the user interface of the website and potential mobile app using Figma, helped set up the database schema with MongoDB, 
+                and connected user form submissions from the frontend to backend.</p>
             <div class="tags">
                 <p class="tag">Angular</p>
-                <p class="tag">TypeScript</p>
-                <p class="tag">HTML</p>
-                <p class="tag">CSS</p>
                 <p class="tag">Python</p>
-                <p class="tag">PostgreSQL</p>
-                <p class="tag">FastAPI</p>
-                <p class="tag">SQLAlchemy</p>
                 <p class="tag">Figma</p>
+                <p class="tag">MonboDB</p>
             </div>
         </section>
+        
         <section class="pink">
-            <h2>01. Research</h2>
-            <h3>The Problem</h3>
-            <p>A lot of artists struggle with creative block. One way artists overcome this is by using idea generators. 
-                There are definitely existing art prompt generators, but they don't really facilitate a sense of community or the sharing of art.
-                While there have been art prompts and art challenges such as Inktober in the past, 
-                it is often difficult to view the work of other artists from these challenges in an organized manner.
-            </p>
-            <p>We wanted to create a space where artists can find inspiration from prompts as well as 
-                other artists' work. At the same time, we wanted to avoid the pitfall of social media in which artists become 
-                too focused on engagement rather than art itself.
-            </p>
-            <h3>User Interviews and Personas</h3>
-            <p>Before starting the design process, our team administered 12 user interviews with artists, 
-                of which I conducted 6. From the information we gathered, we created 3 user personas to represent 
-                the different types of users that our website targets. We also created empathy maps to identiy user 
-                pain points and journey maps to visualize use cases.</p>
-        </section>
-        <section class="white">
-            <h2>02. Design</h2>
-            <h3>Styling</h3>
-            <div class="img-container">
-                <div class="style atb-style" aria-label="atb style" title="atb style guide"></div>
-            </div>
-            <h3>High Fidelity Wireframes and Interactive Prototype</h3>
-            <div class="video-container">
-                <iframe src="https://drive.google.com/file/d/1nfBkjP72UpR9Mfwtyuo3hX6nb2ii_Z-X/preview" width="840" height="500" allow="autoplay"></iframe>
-            </div>
-        </section>
-        <section class="pink">
-            <h2>03. Implementation</h2>
-            <div class="row">
-                <a class="button btn-pink" href="https://aroundtheblock.apps.cloudapps.unc.edu/" target="_blank">View Live Site</a>
-                <a class="button btn-pink" href="https://github.com/chphoom/aroundtheblock" target="_blank">Repository</a>
-            </div>
-            <p>We used Angular, TypeScript, HTML, and CSS to build the frontend; 
-                PostgreSQL and SQLAlchemy for managing the database; and Python to build the backend. 
-                I mainly worked in the frontend to style and structure the pages, retrieve data from the backend, and write scripts. 
-                I also helped with implementing authentication and made some API endpoints and functions in the backend.
-            </p>
+            <h2>Research and Design</h2>
+            <br>
+            <img src="../images/polaris/polaris_59481868.png" width="100%">
         </section>
     </main>
     <footer>
