--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="previews">
             <div class="preview">
                 <div class="project-content">
-                    <a class="thumbnail atb-img" href="projects/atb.html" aria-label="atb thumbnail" title="atb thumbnail"></a>
+                    <a class="thumbnail atb-img" href="https://aroundtheblock.apps.cloudapps.unc.edu/" target="_blank" aria-label="atb thumbnail" title="atb thumbnail"></a>
                     <div class="project-info">
                         <div class="project-title"><h3>Around the Block</h3></div>
                         <div class="project-desc"><p>A website for helping artists get around creative block by providing new challenges and inspiration.</p></div>
