--- a/projects/atb.html
+++ b/projects/atb.html
@@ -56,8 +56,7 @@
     <main>
         <section class="background white">
             <h1>Around the Block</h1>
-            <h4>COMP 590: User Interfaces</h4>
-            <h5>Roles: Design Lead, Developer, Researcher</h5>
+            <h5>Roles: Frontend Lead, Developer, Researcher</h5>
             <p>With a team of three, I designed and developed a website for artists struggling with creative block, 
                 looking to challenge themselves and connect with a community of creatives. Users can generate random art challenges, 
                 called meChallenges, that will challenge them to create something new and unique every time. 
