--- a/resume.html
+++ b/resume.html
@@ -134,6 +134,19 @@
                 <div class="col">
                     <div class="experience">
                         <div class="position">
+                            <h5>Catch | CS+SG</h5>
+                            <p>Sep 2023 - Present</p>
+                        </div>
+                        <ul class="bullets">
+                            <li>
+                                Build a website for a club that modifies toys to be more accessible and donates them to disabled children.
+                            </li>
+                            <li>
+                                Update frontend with React, JavaScript, HTML, and CSS.
+                        </ul>
+                    </div>
+                    <div class="experience">
+                        <div class="position">
                             <h5>LLM Prompt Library | Ally Tech Scholar</h5>
                             <p>Aug 2023 - Present</p>
                         </div>
