--- a/about.html
+++ b/about.html
@@ -62,12 +62,12 @@
                     <p>I'm currently a senior at <span class="bold">UNC Chapel Hill</span> studying Computer Science and Information Science 
                         with a focus on Human-Computer Interaction.</p>
                     <p>Throughout my journey at UNC, I've explored various full stack projects and have discovered a passion for designing and developing interactive websites while embracing the broader scope of software engineering. 
-                    The road to this point hasn't always been easy, but I am always eager to learn and overcome challenges!</p>
-                    <p>In my free time, you can probably find me painting, drafting creative writing ideas, or trying out a new restaurant :)</p>
+                    The journey definitely hasn't been easy, but I am always eager to learn and overcome challenges!</p>
+                    <p>In my free time, you can probably find me painting, ice skating, or trying out a new restaurant :)</p>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 my-picture">
                     <div class="image-wrapper">
-                        <img class="me" src="./images/elaine.png" alt="picture of me" title="picture of me">
+                        <img class="me" src="./images/elaine.png" alt="picture of Elaine" title="picture of Elaine">
                     </div>
                 </div>
             </div>
